deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-chatbot
  template:
    metadata:
      labels:
        app: my-chatbot
    spec:
      imagePullSecrets:       # Harbor 열쇠 (이건 그대로 두세요! 잘하셨습니다)
      - name: regcred
      containers:
      - name: my-web
        # 👇 [수정할 부분] 
        # 기존: .../my-web-app:44bcb... (X)
        # 변경: 젠킨스가 만든 이름(bank-app)과 첫 빌드 번호(v1)로 변경 (O)
        image: 192.168.10.20/library/bank-app:v6
        ports:
        - containerPort: 80
